--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <li class="nav-item"><button class="btn btn-header dragon" id="dragon">Dragon</button></li>
                 <li class="nav-item"><button class="btn btn-header steel" id="steel">Steel</button></li>
                 <li class="nav-item"><button class="btn btn-header fairy" id="fairy">Fairy</button></li>
+                <li class="nav-item filter-container"><label for="name-filter">Buscar: </label><input type="text" id="name-filter" placeholder=""></li>
 
             </ul>
 
@@ -51,42 +52,7 @@
 
             <div class="pokemon-todos" id="listaPokemon">
 
-                <!-- Este es una tarjeta de un pokemon 
-                <div class="pokemon">
-
-                     Número del pokémon
-                    <p class="pokemon-id-back">#025</p>
-
-                     Imágen del pokemon
-                    <div class="pokemon-imagen">
-                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/25.png" alt="">
-                    </div>
-
-                     información del pokémon
-                    <div class="pokemon-info">
-
-                        Nombre y id del pokemon
-                        <div class="nombre-contenedor">
-                            <p class="pokemon-id">#025</p>
-                            <h2 class="pokemon-nombre">Pikachu</h2>
-                        </div>
-
-                        Tipos del pokemon (puede tener solo uno o dos)
-                        <div class="pokemon-tipos">
-                            <p class="tipo">Eléctrico</p>
-                            <p class="tipo">Rata</p>
-                        </div>
-
-                        Altura y peso del pokemon
-                        <div class="pokemon-stats">
-                            <p class="stat">60cm</p>
-                            <p class="stat">60kg</p>
-                        </div>
-
-                    </div>
-
-                </div>
-            -->
+            <!-- Aquí se va a poner cada una de las tarjetas Pokémon -->
 
             </div>
 
